Bug 486044.  Make sure to pass the right principal to CreateSheet even in the non-document sheet case. r+sr=sicking